@@ -21,10 +21,10 @@ namespace {
         fostlib::http::server::request &req
     ) {
         auto data = m.arguments.size()
-            ? fostgres::sql(config,
+            ? fostgres::sql(config, req,
                 fostlib::coerce<fostlib::string>(m.configuration["GET"]),
                 m.arguments)
-            : fostgres::sql(config,
+            : fostgres::sql(config, req,
                 fostlib::coerce<fostlib::string>(m.configuration["GET"]));
         fostlib::json result;
         fostlib::insert(result, "@context", "http://www.kirit.com/fostgres/context/rows");
